
syntax = "proto3";
package com.hugoserve.demo.proto;

option java_package = "com.hugoserve.demo.proto";
option java_multiple_files = true;


message  TransactionRequest{
  string transaction_id=1;
}